--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
     "Laetitia Teodorescu <laetitia.teodorescu@inria.fr>"
 ]
 readme = "README.md"
+licence = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = "^3.10"
